Updating PATHS in java and ensuring confd templates are upgraded